--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  padding: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,6 +14,3 @@
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
-}
